[gd_scene load_steps=8 format=3 uid="uid://cwa16n12ahvlh"]

[ext_resource type="Script" path="res://script/level.gd" id="1_w8mm7"]
[ext_resource type="Texture2D" uid="uid://bw2lovcdsl61h" path="res://speedy_saucer_assets/purple.png" id="2_tkmp3"]
[ext_resource type="PackedScene" uid="uid://b66nsef2vu844" path="res://Scene/maze/maze3.tscn" id="3_2ntgw"]
[ext_resource type="PackedScene" uid="uid://bt1ljoy3ye5hh" path="res://Scene/player.tscn" id="4_kdr5m"]

[sub_resource type="LabelSettings" id="LabelSettings_tl2ps"]
font_size = 71

[sub_resource type="LabelSettings" id="LabelSettings_tor6n"]
font_size = 86

[sub_resource type="LabelSettings" id="LabelSettings_wjwga"]
font_size = 21

[node name="Level3" type="Node2D"]
script = ExtResource("1_w8mm7")

[node name="Graphics" type="Node" parent="."]

[node name="Bad Exit" type="Label" parent="Graphics"]
offset_left = -786.0
offset_top = 1078.0
offset_right = -597.0
offset_bottom = 1475.0
text = "Not 
The 
good 
one"
label_settings = SubResource("LabelSettings_tl2ps")

[node name="CanvasLayer" type="CanvasLayer" parent="Graphics"]
layer = -89

[node name="Background" type="TextureRect" parent="Graphics/CanvasLayer"]
z_index = -100
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_tkmp3")
stretch_mode = 1

[node name="EndLabel" type="Label" parent="Graphics"]
z_index = -5
offset_left = 2256.0
offset_top = 1511.0
offset_right = 2467.0
offset_bottom = 1629.0
text = "END"
label_settings = SubResource("LabelSettings_tor6n")

[node name="StartLabel" type="Label" parent="Graphics"]
z_index = -5
offset_left = 42.0
offset_top = 24.0
offset_right = 253.0
offset_bottom = 121.0
text = "START"
label_settings = SubResource("LabelSettings_tor6n")

[node name="TutorialLabel" type="Label" parent="Graphics"]
z_index = -5
offset_left = 436.0
offset_top = 4.0
offset_right = 666.0
offset_bottom = 273.0
text = "Don't cross the border
Move :
Arrows Keys
or ZQSD

Difficulty : 
1) 1 or & (speed x1)
2) 2 or Ã© (speed x4)"
label_settings = SubResource("LabelSettings_wjwga")

[node name="Area2D" parent="." instance=ExtResource("3_2ntgw")]
z_index = -5
position = Vector2(0, 3)

[node name="Player" parent="." instance=ExtResource("4_kdr5m")]
position = Vector2(169, 113)

[node name="Area2D4" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D4"]
position = Vector2(350, 178)
polygon = PackedVector2Array(1865, 1124, 2148, 1121, 2184, 1677, 1880, 1677)

[node name="Polygon2D" type="Polygon2D" parent="Area2D4"]
visible = false
polygon = PackedVector2Array(1865, 1232, 2457, 1200, 2473, 1496, 1873, 1510)

[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D4" to="." method="_on_area_2d_4_body_entered"]
